# MusicShop

./: .pre-commit-config.yaml  README.md
music_shop/: docker-compose.yml  manage.py  pyproject.toml
music_shop/album/: admin.py  models.py  serializers.py  urls.py  views.py
music_shop/album/migrations/: 0001_initial.py  0001_squashed_0002_remove_album_author.py  0002_remove_album_author.py
music_shop/author/: admin.py  models.py  serializers.py  urls.py  views.py
music_shop/author/migrations/: 0001_initial.py
music_shop/collection/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
music_shop/collection/migrations/: 0001_initial.py  0001_squashed_0004_alter_collection_user.py  0002_alter_collection_user.py  0003_remove_collection_name.py
music_shop/genre/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
music_shop/genre/migrations/: 0001_initial.py
music_shop/music_shop/: asgi.py  settings.py  urls.py  wsgi.py
music_shop/playlist/: admin.py  models.py  serializers.py  urls.py  validation.py  views.py
music_shop/playlist/migrations/: 0001_initial.py
music_shop/song/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
music_shop/song/migrations/: 0001_initial.py  0001_squashed_0004_alter_song_album.py  0002_alter_song_data.py  0002_rename_date_song_release_date.py  0002_song_blocked.py  0003_blockedsong.py  0003_song_album.py  0004_alter_blockedsong_song.py  (+1 more)
music_shop/tests/: confest.py  setup.cfg
music_shop/user/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
(+11 files in other folders)
